# ITKfilters

./: .gitignore  .ycm_extra_conf.py  README.md
scripts-cpp/: CMakeLists.txt  convertToNRRD.cxx  denoiseCoherenceAnisotropicLBR.cxx  fastMarchingSegmentation.cxx  fftPad.cxx  fftPadPositiveIndex.cxx  generate_wavelet_coefficients.cxx  imageInfo.cxx  itkTestingComparisonImageFilterTest.cxx  regionGrowingConfidenceConnectedSegmentation.cxx  regionGrowingSegmentation.cxx  restore_metadata_from_reference_image.h  rieszWaveletPhaseAnalysis.cxx  rotateRieszWithStructureTensorDirections.cxx  runViewImage.cxx
scripts-python/: batch_extract_image_filter.sh  binary_3d.py  binary_denoise_3d.py  binary_denoise_3d_fillholes_iterative.py  binary_input.py  denoise_input.py  denoise_tv.py  extract_image_filter.py  invert_intensity.py  montage_tiles.py
src/: CMakeLists.txt
src/Common/: prog_options_test.h  visualize_functions.h  visualize_functions.hxx
src/Denoise/: CMakeLists.txt  Denoise.cpp  Denoise.h  itkFlatStructuringElementWithImageBridge.h  itkFlatStructuringElementWithImageBridge.hxx
src/Denoise/tem_saxs_paper/: CMakeLists.txt  tem_saxs_paper.cpp
src/Denoise/test/: CMakeLists.txt  testFlatStructuringElementWithImageBridge.cpp  test_denoise.cpp
src/ObjectList/: itkImageList.h  itkImageList.hxx  itkImageListSource.h  itkImageListSource.hxx  itkImageListToImageFilter.h  itkImageListToImageFilter.hxx  itkImageListToImageListApplyFilter.h  itkImageListToImageListApplyFilter.h.kws  itkImageListToImageListApplyFilter.hxx  itkImageListToImageListFilter.h  itkImageListToImageListFilter.hxx  itkImageListToSingleImageFilter.h  itkImageListToSingleImageFilter.hxx  itkImageListToVectorImageFilter.h  itkImageListToVectorImageFilter.hxx  itkImageToImageListFilter.h  itkImageToImageListFilter.hxx  itkObjectList.h  itkObjectList.hxx  itkObjectListSource.h  itkObjectListSource.hxx  itkObjectListToObjectListFilter.h  itkObjectListToObjectListFilter.hxx  itkUnaryFunctorObjectListBooleanFilter.h  itkUnaryFunctorObjectListBooleanFilter.hxx  itkUnaryFunctorObjectListFilter.h  itkUnaryFunctorObjectListFilter.hxx  itkVectorImageToImageListFilter.h  itkVectorImageToImageListFilter.hxx
src/Quadrature/: CMakeLists.txt  itkAdaptiveFiltering3DImageFilter.h  itkAdaptiveFiltering3DImageFilter.hxx  itkMonogenicPhaseAnalysisFrequencyImageFilter.h  itkMonogenicPhaseAnalysisFrequencyImageFilter.hxx  itkMonogenicSignalFrequencyImageFilter.h  itkMonogenicSignalFrequencyImageFilter.hxx  itkRieszImageFilter.h  itkRieszImageFilter.hxx
src/Quadrature/test/: CMakeLists.txt  test_quadrature.cpp  test_riesz.cpp  test_wavelet.cpp
src/Skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  Skeleton.txx
src/Skeleton/test/: CMakeLists.txt  test_skeleton.cpp
src/Wavelet/: Ind2Sub.h  itkForwardWaveletFFT.h  itkForwardWaveletFFT.hxx  itkForwardWaveletFilterBankFFT.h  itkForwardWaveletFilterBankFFT.hxx  itkFrequencyExpandImageFilter.h  itkFrequencyExpandImageFilter.hxx  itkFrequencyShrinkImageFilter.h  itkFrequencyShrinkImageFilter.hxx  itkInverseWaveletFFT.h  itkInverseWaveletFFT.hxx  itkInverseWaveletFilterBankFFT.h  itkInverseWaveletFilterBankFFT.h.old  itkInverseWaveletFilterBankFFT.hxx  itkInverseWaveletFilterBankFFT.hxx.old  itkWaveletFrequencyFilterBankForwardGenerator.h  itkWaveletFrequencyFilterBankForwardGenerator.hxx  itkWaveletFrequencyFilterBankGenerator.h  itkWaveletFrequencyFilterBankGenerator.hxx  itkWaveletFrequencyFilterBankInverseGenerator.h  itkWaveletFrequencyFilterBankInverseGenerator.hxx  itkWaveletFrequencyForward.h  itkWaveletFrequencyForward.hxx  itkWaveletFrequencyInverse.h  itkWaveletFrequencyInverse.hxx
src/Wavelet/IsotropicWaveletFrequencyFunctions/: itkHeldWavelet.h  itkHeldWavelet.hxx  itkIsotropicWaveletFrequencyFunction.h  itkIsotropicWaveletFrequencyFunction.hxx  itkVowWavelet.h  itkVowWavelet.hxx
src/Wavelet/WaveletFunctions/: itkHeldWavelet.h  itkHeldWavelet.hxx  itkWaveletFunction.h  itkWaveletFunction.hxx
src/Wavelet/python-play/: downsample-plot.py
src/Wavelet/python-play/.ropeproject/: globalnames
src/Wavelet/test/: CMakeLists.txt  testFrequencyExpand.cpp  testFrequencyShrink.cpp  testWaveletFFT.cpp  testWaveletFilterBankFFT.cpp  testWaveletFrequency.cpp  testWaveletFrequencyFilterBankForwardGenerator.cpp  testWaveletFrequencyFilterBankGenerator.cpp  testWaveletFrequencyFilterBankInverseGenerator.cpp  testWaveletFrequencyInverse.cpp  test_waveletFT.cpp
src/denoise/: CMakeLists.txt
src/denoise/test/: CMakeLists.txt
src/fixtures/: M1045_11_20.tiff  collagen_101x99x20.tiff  collagen_21x21x9.tiff  collagen_32x32x16.tif  collagen_64x64x16.tiff  collagen_98x98x20.tiff
src/main/: CMakeLists.txt  main.cpp  prog_options.h
